# omnivoice-py

./: .gitignore  01_StartServer.bat  02_StartTestDesign.bat  03_StartTestMulti.bat  README.md  pyproject.toml  requirements.txt  server.py  test_client_design.py  test_client_multi.py
